--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,10 +5,9 @@
   font-size: 18px;
   line-height: 22px;
   text-decoration-line: underline;
-  color: #FFFFFF;
-  transition: opacity .3s linear;
+  color: #ffffff;
+  transition: opacity 0.3s linear;
 }
-
 .place__link:hover {
-  opacity: .3;
+  opacity: 0.3;
 }
