--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,7 +2,7 @@
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 2px;
-  color: #AAAAAA;
+  color: #aaaaaa;
   display: block;
   margin: 0;
 }
