--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,16 +1,23 @@
 .cover__subtitle {
-  text-align: center;
+  margin: 32px auto 0;
   padding: 0;
-  margin: 32px 0 0 0;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+  text-align: center;
+  max-width: 360px;
+  z-index: 5;
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 1023px) {
+  .cover__subtitle {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+@media screen and (max-width: 768px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 16px 0 0 0;
+    margin: 16px auto 0;
   }
 }
