--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,26 +1,25 @@
 .cover {
-  max-width: calc(100% - 48px*2);
-  height: 740px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  position: relative;
+  display: flex;
+  background-image: url(../../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 1184px;
+  min-height: 740px;
 }
-
-@media screen and (max-width: 1279px){
+@media screen and (max-width: 1279px) {
   .cover {
-    height: 640px;
     max-width: 100%;
+    min-height: 640px;
   }
 }
-
-@media screen and (max-width: 1023px){
+@media screen and (max-width: 1023px) {
   .cover {
-    max-height: 480px;
+    min-height: 480px;
   }
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .cover {
-    max-height: 200px;
+    min-height: 200px;
   }
 }
