--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,15 +1,13 @@
 .header__link {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   cursor: pointer;
-  transition: opacity linear .3s;
+  transition: opacity linear 0.3s;
 }
-
 .header__link:hover {
-  opacity: .3;
+  opacity: 0.3;
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .header__link {
     font-size: 18px;
     line-height: 20px;
