--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -1,9 +1,8 @@
 .header__logo-link {
   text-decoration: none;
   cursor: pointer;
-  transition: opacity linear .3s;
+  transition: opacity linear 0.3s;
 }
-
-.header__logo-link:hover{
-  opacity: .3;
+.header__logo-link:hover {
+  opacity: 0.3;
 }
