--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,12 +3,13 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
+  width: 640px;
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    margin: 16px 0 0 0;
+    margin: 16px auto 0;
+    width: 288px;
   }
 }
