--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,12 +4,12 @@
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
-  max-width: 100%;
+  width: 720px;
 }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    width: 288px;
   }
 }
