--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -13,14 +13,14 @@
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(42, 44, 47, 0.3);
+  background-color: #2A2C2F;
+  opacity: 0.3;
   position: absolute;
   top: 0;
   left: 0;
-  transition: background-color 0.3s linear;
+  transition: all 0.3s linear;
   z-index: 1;
 }
 .cover__link:hover::before {
-  background-color: rgba(42, 44, 47, 0.8);
   opacity: 0.8;
 }
